# daybrief

./: .gitignore  CLA.md  CONTRIBUTING.md  LICENSE.md  Package.resolved  Package.swift  README.md  SECURITY.md  SPEC.md  index.html  package.json  pnpm-lock.yaml  project.yml  tsconfig.json  vite.config.ts  vitest.config.ts
.claude/: settings.json
App/: AppDelegate.swift  BriefPanelController.swift  Daybrief.entitlements  DaybriefApp.swift  DaybriefWidget.entitlements  Info.plist
App/Widget/: DaybriefWidgetBundle.swift  Info.plist  WidgetBriefViews.swift
Sources/AppFeature/: AppEnvironment.swift  AppModel.swift  AppPreviewSupport.swift  DaybriefTheme.swift  DaybriefWindow.swift  Exports.swift  KeychainTokenProvider.swift  ModelListPresentation.swift  RootWindowView.swift  SchedulerCoordinator.swift  WebAuthPresenter.swift  WidgetSnapshotWriter.swift
Sources/BriefRender/: BriefPresentation.swift  BriefRenderer.swift  BriefViewModel.swift  HTMLEscaping.swift
Sources/ConnectorKit/: AuthPresenter.swift  AuthStrategy.swift  Connector.swift  ConnectorError.swift  FetchRequest.swift  FixtureLoader.swift  LoopbackRedirectListener.swift  OAuthConfig.swift  OAuthFlow.swift  OAuthRedirect.swift  OAuthToken.swift  PKCE.swift  RawItem.swift  StubAuthPresenter.swift  TokenProvider.swift  TokenSpec.swift
docs/: CONNECTORS.md
scripts/: dev-run.sh
src/: styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: README.md
src-tauri/src/: db.rs  lib.rs  main.rs  models.rs  scheduler.rs  secrets.rs
src/app/: App.tsx  (+5 more)
(+198 files in other folders)
